[package]
name = "cblm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.4", features = ["derive"] }
itertools = "0.10.3"
rayon = "1.5.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
walkdir = "2.3.2"
